Fix build configuration to allow successful deployment

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ npm-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local.rtf
+
+# Temporary files
+cookies.txt
 
 # Contentlayer
 .contentlayer
