--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/crypto-js": "^4.2.2",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
+    "clsx": "^2.1.1",
     "contentlayer": "0.3.0",
+    "crypto-js": "^4.2.0",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "iron-session": "^8.0.4",
     "mdx-bundler": "^9.0.0",
     "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
@@ -42,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^10.1.0",
     "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
