--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^10.1.0",
     "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
