Fix TypeScript errors in grantee report submission system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "**/*.tsx",
     ".contentlayer/generated",
     ".contentlayer/generated/**/*.json",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
