Add .env.local.rtf and cookies.txt to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ npm-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local.rtf
+cookies.txt
 
 # Contentlayer
 .contentlayer
