feat: implement grantee report submission system

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
+    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "engines": {
     "node": "^18.0.0"
@@ -24,14 +26,18 @@
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/marked": "^5.0.2",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
     "contentlayer": "0.3.0",
+    "crypto-js": "^4.2.0",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "iron-session": "^8.0.1",
+    "marked": "^15.0.7",
     "mdx-bundler": "^9.0.0",
     "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
@@ -42,6 +48,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
@@ -61,11 +68,18 @@
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/react": "^18.0.18",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
     "esbuild-register": "3.4.2",
@@ -76,6 +90,9 @@
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "js-yaml": "4.1.0",
     "lint-staged": "^13.0.0",
     "prettier": "^2.7.0",
