--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ GH_REPORTS_REPO=reports
 SENDGRID_API_KEY=
 SENDGRID_RECIPIENT=
 SENDGRID_CC=
+SENDGRID_BCC=
 SENDGRID_VERIFIED_SENDER=
 BTCPAY_STORE_ID=
 BTCPAY_URL=
