docs: update .env.example with BTCPAY_INVOICE_KEY

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,8 @@ SENDGRID_RECIPIENT=
 SENDGRID_RECEPIENT=
 SENDGRID_CC=
 SENDGRID_VERIFIED_SENDER=
-BTCPAY_STORE_ID=
 BTCPAY_URL=
-BTCPAY_API_KEY=
+BTCPAY_INVOICE_KEY=
 STRIPE_SECRET_KEY=
 ZAPRITE_USER_UUID=
 NEXT_PUBLIC_GOOGLE_DOC_ID=
