--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ GH_APP_REPO=applications
 GH_REPORTS_REPO=reports
 SENDGRID_API_KEY=
 SENDGRID_RECIPIENT=
-SENDGRID_RECEPIENT=
 SENDGRID_CC=
+SENDGRID_BCC=
 SENDGRID_VERIFIED_SENDER=
 BTCPAY_URL=
 BTCPAY_INVOICE_KEY=
