--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
+    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
+    "test": "jest"
   },
   "engines": {
     "node": "^18.0.0"
@@ -32,6 +33,7 @@
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "marked": "^15.0.8",
     "mdx-bundler": "^9.0.0",
     "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
@@ -42,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^10.1.0",
     "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
@@ -63,6 +66,9 @@
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.0.18",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
@@ -76,6 +82,8 @@
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "js-yaml": "4.1.0",
     "lint-staged": "^13.0.0",
     "prettier": "^2.7.0",
