--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "start": "next dev",
     "dev": "cross-env INIT_CWD=$PWD next dev",
-    "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/postbuild.mjs",
+    "build": "npx contentlayer build && cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
     "test": "jest"
   },
   "engines": {
-    "node": "^18.0.0"
+    "node": ">=22.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -27,7 +27,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
-    "contentlayer": "0.3.0",
+    "contentlayer": "^0.3.4",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
@@ -36,9 +36,9 @@
     "marked": "^15.0.8",
     "mdx-bundler": "^9.0.0",
     "next": "^13.5.8",
-    "next-contentlayer": "0.3.0",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.0",
-    "pliny": "0.0.10",
+    "pliny": "^0.0.10",
     "postcss": "^8.4.16",
     "public-google-sheets-parser": "^1.5.4",
     "react": "18.2.0",
