--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ STRIPE_SECRET_KEY=
 ZAPRITE_USER_UUID=
 NEXT_PUBLIC_GOOGLE_DOC_ID=
 NEXT_PUBLIC_GOOGLE_API_KEY=
+
+# Fund-specific webhook secrets
+BTCPay_WEBHOOK_SECRET_GENERAL=your_general_fund_secret
+BTCPay_WEBHOOK_SECRET_NOSTR=your_nostr_fund_secret
+BTCPay_WEBHOOK_SECRET_OPS=your_ops_budget_secret
