--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ GH_APP_REPO=applications
 GH_REPORTS_REPO=reports
 SENDGRID_API_KEY=
 SENDGRID_RECIPIENT=
+SENDGRID_RECIPIENT_ACCOUNTING=
 SENDGRID_CC=
 SENDGRID_BCC=
 SENDGRID_VERIFIED_SENDER=
