docs: add SENDGRID_SENDER_NAME to .env.example
- Add new environment variable for customizing sender name in emails
- Include helpful comment showing default value is 'OpenSats'
- Document optional configuration for email sender branding

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ SENDGRID_RECIPIENT_ACCOUNTING=
 SENDGRID_CC=
 SENDGRID_BCC=
 SENDGRID_VERIFIED_SENDER=
+SENDGRID_SENDER_NAME= # (defaults to "OpenSats")
 BTCPAY_URL=
 BTCPAY_INVOICE_KEY=
 STRIPE_SECRET_KEY=
