--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,19 @@ GH_APP_REPO=applications
 GH_REPORTS_REPO=reports
 SENDGRID_API_KEY=
 SENDGRID_RECIPIENT=
+SENDGRID_RECIPIENT_ACCOUNTING=
 SENDGRID_CC=
 SENDGRID_BCC=
 SENDGRID_VERIFIED_SENDER=
+SENDGRID_SENDER_NAME= # (defaults to "OpenSats")
 BTCPAY_URL=
 BTCPAY_INVOICE_KEY=
 STRIPE_SECRET_KEY=
 ZAPRITE_USER_UUID=
 NEXT_PUBLIC_GOOGLE_DOC_ID=
 NEXT_PUBLIC_GOOGLE_API_KEY=
+
+# Fund-specific webhook secrets
+BTCPAY_WEBHOOK_SECRET_GENERAL=generated_by_btcpay
+BTCPAY_WEBHOOK_SECRET_NOSTR=generated_by_btcpay
+BTCPAY_WEBHOOK_SECRET_OPS=generated_by_btcpay
