--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ NEXT_PUBLIC_GOOGLE_API_KEY=
 BTCPAY_WEBHOOK_SECRET_GENERAL=generated_by_btcpay
 BTCPAY_WEBHOOK_SECRET_NOSTR=generated_by_btcpay
 BTCPAY_WEBHOOK_SECRET_OPS=generated_by_btcpay
+STRIPE_WEBHOOK_SECRET=generated_by_stripe
+
