--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "contentlayer": "^0.3.4",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
+    "fathom-client": "^3.7.2",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
